# deepsetstats

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
deepsetstats/: Dockerfile  Dockerfile_bk  __init__.py  deepsetstats.py  paths.py  pyproject.toml  requirements.txt
deepsetstats/archive/: video_downloader.py
deepsetstats/archive/court_detection/: edge_detection.py
deepsetstats/archive/utils/: utils_colors.py  utils_tools.py
deepsetstats/court_detection/: edge_detection.py
deepsetstats/dataset/: utils.py  video_downloader.py
deepsetstats/dataset/court_detection/: constants.py  get_similar_courts.py  reference_court.py  utils.py
deepsetstats/dataset/dataset_court/: dataset_court_creation.py  dataset_court_images.py  utils.py
deepsetstats/dataset/dataset_court/parquet/: dataset_court.parquet
deepsetstats/dataset/grandslams/: get_australiaopen_videos.py  get_master_table.py  get_rolandgarros_videos.py  get_usopen_videos.py  get_wimbledon_videos.py
deepsetstats/dataset/grandslams/parquet/: australia_open_videos.parquet  master.parquet  reference_videos.parquet  roland_garros_videos.parquet  us_open_videos.parquet  wimbledon_videos.parquet
deepsetstats/dataset/players/: get_atp_players.py  utils.py
deepsetstats/dataset/players/flags/: flags.pickle
deepsetstats/dataset/players/html/: rankRange=1-1000&rankDate=2009-05-11.html  rankRange=1-1000&rankDate=2015-10-05.html  (+4 more)
deepsetstats/dataset/template_matching/: exec_template_matching.sh  template_matching.py  toy.py
deepsetstats/dataset/tennistv/: get_master_table.py  get_tennistv_videos.py  videos_downloader.py
deepsetstats/dataset/tournaments/: constants.py  get_atp_tournaments.py  get_tournaments_youtube_naming.py
deepsetstats/notebooks/: test.ipynb
deepsetstats/notebooks/court_detection/: [deprecated]court_detection.ipynb  court_detection.ipynb  court_detection_lab.ipynb  hough_transform.ipynb
deepsetstats/src/: main.py
deepsetstats/src/config/: config.yaml  config_v1.yaml
deepsetstats/src/data/: annotations.py  dataset.py
deepsetstats/src/utils/: inputs.py  parse_config.py
deepsetstats/utils/: constants.py  utils_colors.py  utils_court.py  utils_dataclasses.py  utils_viz.py  videocapture.py
(+168 files in other folders)
