[tool]

[tool.poetry]
name = "deepsetstats"
version = "0.0.0"
homepage = "https://github.com/DavidAmat/deepsetstats"
description = "Deep Learning for Tennis Statistical Retrieval"
authors = ["David Amat <daolondrizdaolondriz@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE",
    "deepsetstats/py.typed"
]

[tool.poetry.dependencies]
python = "^3.8.6"
importlib_metadata = "^3.4.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"

pylint = "^2.6.0"
black = "22.3.0"
mypy = "0.960"
yamllint = "^1.25.0"
[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=deepsetstats --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
